# login_ui

./: .gitignore  CMakeLists.txt  README.md  resources.qrc  resources_rc.py
src/: main.cpp
src/oauth/: facebookauth.cpp  facebookauth.h  githubauth.cpp  githubauth.h  googleauth.cpp  googleauth.h  oauthbase.cpp  oauthbase.h
src/qml/: main.qml
src/qml/components/: CustomButton.qml  CustomInput.qml  LoginDialog.qml  SSOButton.qml  StyledButton.qml  StyledCheckBox.qml  StyledInput.qml  login.qml
src/qml/styles/: DefaultStyle.qml  StyleSystem.qml  qmldir
